--- a/livetv.html
+++ b/livetv.html
@@ -351,9 +351,9 @@ if (cookiecook != "no") {
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-канала:<h1>
-     <!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
+     <mark>Интернет-канал сейчас ничего не вещает</mark>
      <div class="video">
-          <iframe src="https://vk.ru/video_ext.php?oid=-214689242&id=456239057" width="426" height="240" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe>
+          <iframe width="850" height="478" src="https://rutube.ru/play/embed/13b74d1b57aebefd3edc195ad681a909?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
           <b>Расписание на 13.03.2024</b>
