--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ if (cookiecook != "no") {
 
 <div class="title1">
 		<b>Прямой эфир инт.-телеканала</b><br>
-		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
+		<mark>Интернет-канал сейчас ничего не вещает</mark>
 </div>
 <div class="video">
 	<!-- <iframe width="560" height="315" src="https://nuum.ru/embed/record/1777558" title="Nuum video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
@@ -368,7 +368,7 @@ if (cookiecook != "no") {
 		<p>17:23 МСК:</p>
 		<p>К/Ф "Карачун"</p>
 </div>
-
+<div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div>
 <div class="title2">
 		<p>Реквизиты для финансовой помощи</p>
 		<p>Номер карты МТС Банка:</p>
