--- a/livetv.html
+++ b/livetv.html
@@ -351,13 +351,13 @@ if (cookiecook != "no") {
 
 <div class='ob'>
      <h1 class='Nashi_horse'>Прямой эфир интернет-канала:<h1>
-     <mark>Интернет-канал сейчас ничего не вещает</mark>
+     <!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
      <div class="video">
           <iframe width="850" height="478" src="https://rutube.ru/play/embed/1cdd05eb7863810373e48bd5754553a1?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
-          <b>Расписание на 22.03.2024</b>
-          <p>С 15:30 МСК:</p>
+          <b>Расписание на 24.03.2024</b>
+          <p>С 13:20 МСК:</p>
           <p>-Короткометражный фильм "Страйдер"</p>
           <!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
           <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 1 серия.</p>
@@ -366,8 +366,8 @@ if (cookiecook != "no") {
           <p>-Велопрогулка по Подмосковью - Люберцы</p>
           <p>-Короткометражный фильм "Беседа"</p>
           <p>-Короткометражный фильм "Скейт"</p>
-          <p>17:23 МСК:</p>
-          <p>К/Ф "Карачун"</p>
+          <p>15:13 МСК:</p>
+          <p>К/Ф "ЭГО"</p>
      </div>
 </div>
 <div class="footer2">
