--- a/index.html
+++ b/index.html
@@ -351,8 +351,8 @@ if (cookiecook != "no") {
 		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
 </div>
 <div class="video">
-	<!-- <iframe width="560" height="315" src="https://nuum.ru/embed/record/1777558" title="Nuum video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
-	<iframe width="850" height="478" src="https://rutube.ru/play/embed/1cdd05eb7863810373e48bd5754553a1?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+	<iframe width="560" height="315" src="https://nuum.ru/embed/record/1777558" title="Nuum video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	<!-- <iframe width="850" height="478" src="https://rutube.ru/play/embed/1cdd05eb7863810373e48bd5754553a1?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe> -->
 </div>
 <div class="title1">
 		<b>Расписание на 24.03.2024</b>
