--- a/index.html
+++ b/index.html
@@ -348,15 +348,14 @@ if (cookiecook != "no") {
 
 <div class="title1">
 		<b>Прямой эфир инт.-телеканала</b><br>
-		<mark>Интернет-канал сейчас ничего не вещает</mark>
+		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
 </div>
 <div class="video">
-	<iframe src="https://vk.com/video_ext.php?oid=-214689242&id=456239061&hd=1" width="640" height="360" allow="autoplay; encrypted-media; fullscreen; picture-in-picture;" frameborder="0" allowfullscreen></iframe>
-	<!-- <iframe width="850" height="478" src="https://rutube.ru/play/embed/1cdd05eb7863810373e48bd5754553a1?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe> -->
+	<iframe width="850" height="478" src="https://rutube.ru/play/embed/f2b7dd06fcfa59ca49a3fe2393d761c2?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 </div>
 <div class="title1">
-		<b>Расписание на 24.03.2024</b>
-		<p>С 13:20 МСК:</p>
+		<b>Расписание на 29.03.2024</b>
+		<p>С 18:30 МСК:</p>
 		<p>-Короткометражный фильм "Страйдер"</p>
 		<!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
 		<p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 1 серия.</p>
@@ -365,8 +364,10 @@ if (cookiecook != "no") {
 		<p>-Велопрогулка по Подмосковью - Люберцы</p>
 		<p>-Короткометражный фильм "Беседа"</p>
 		<p>-Короткометражный фильм "Скейт"</p>
-		<p>15:13 МСК:</p>
+		<p>20:23 МСК:</p>
 		<p>К/Ф "ЭГО"</p>
+		<p>20:51 МСК:</p>
+		<p>К/Ф "Карачун"</p>
 </div>
 <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div>
 <div class="title2">
