--- a/index.html
+++ b/index.html
@@ -348,26 +348,26 @@ if (cookiecook != "no") {
 
 <div class="title1">
 		<b>Прямой эфир инт.-телеканала</b><br>
-		<mark>Интернет-канал сейчас ничего не вещает</mark>
+		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
 </div>
 <div class="video">
-	<iframe width="850" height="478" src="https://rutube.ru/play/embed/f2b7dd06fcfa59ca49a3fe2393d761c2?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+	<iframe width="850" height="478" src="https://rutube.ru/play/embed/0553d30e022657e3e4952aaa57316855?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 </div>
 <div class="title1">
-		<b>Расписание на 29.03.2024</b>
-		<p>С 18:30 МСК:</p>
-		<p>-Короткометражный фильм "Страйдер"</p>
-		<!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
-		<p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 1 серия.</p>
-		<p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
-		<p>-Короткометражный фильм "СДЕЛКА".</p>
-		<p>-Велопрогулка по Подмосковью - Люберцы</p>
-		<p>-Короткометражный фильм "Беседа"</p>
-		<p>-Короткометражный фильм "Скейт"</p>
-		<p>20:23 МСК:</p>
-		<p>К/Ф "ЭГО"</p>
-		<p>20:51 МСК:</p>
-		<p>К/Ф "Карачун"</p>
+		<b>Расписание на 04.04.2024</b>
+        <p>С 16:50 МСК:</p>
+        <p>-Короткометражный фильм "Страйдер"</p>
+        <!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
+        <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 1 серия.</p>
+        <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
+        <p>-Короткометражный фильм "СДЕЛКА".</p>
+        <p>-Велопрогулка по Подмосковью - Люберцы</p>
+        <p>-Короткометражный фильм "Беседа"</p>
+        <p>-Короткометражный фильм "Скейт"</p>
+        <p>18:43 МСК:</p>
+        <p>К/Ф "ЭГО"</p>
+        <p>19:15 МСК:</p>
+        <p>К/Ф "Карачун"</p>
 </div>
 <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div>
 <div class="title2">
