--- a/index.html
+++ b/index.html
@@ -348,14 +348,14 @@ if (cookiecook != "no") {
 
 <div class="title1">
 		<b>Прямой эфир инт.-телеканала</b><br>
-		<mark>Интернет-канал сейчас ничего не вещает</mark>
+		<!-- <mark>Интернет-канал сейчас ничего не вещает</mark> -->
 </div>
 <div class="video">
-	<iframe width="850" height="478" src="https://rutube.ru/play/embed/0553d30e022657e3e4952aaa57316855?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+	<iframe width="850" height="478" src="https://rutube.ru/play/embed/d4af7a73d77b8ffed9706755e60ab3be?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 </div>
 <div class="title1">
-		<b>Расписание на 04.04.2024</b>
-        <p>С 16:50 МСК:</p>
+		<b>Расписание на 08.04.2024</b>
+        <p>С 11:15 МСК:</p>
         <p>-Короткометражный фильм "Страйдер"</p>
         <!-- <p>-Короткометражный фильм "Страйдер 2"</p> -->
         <p>-Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 1 серия.</p>
@@ -364,12 +364,12 @@ if (cookiecook != "no") {
         <p>-Велопрогулка по Подмосковью - Люберцы</p>
         <p>-Короткометражный фильм "Беседа"</p>
         <p>-Короткометражный фильм "Скейт"</p>
-        <p>18:43 МСК:</p>
+        <p>13:08 МСК:</p>
         <p>К/Ф "ЭГО"</p>
-        <p>19:15 МСК:</p>
+        <p>13:40 МСК:</p>
         <p>К/Ф "Карачун"</p>
 </div>
-<div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div>
+<!-- <div class="photo"><img src="/theme/images/Rpr29qovqzc.jpg"></div> -->
 <div class="title2">
 		<p>Реквизиты для финансовой помощи</p>
 		<p>Номер карты МТС Банка:</p>
