--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ if (cookiecook != "no") {
 		<mark>Интернет-канал сейчас ничего не вещает</mark>
 </div>
 <div class="video">
-	<iframe width="560" height="315" src="https://nuum.ru/embed/record/1944450" title="Nuum video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+	<iframe width="850" height="478" src="https://rutube.ru/play/embed/d4af7a73d77b8ffed9706755e60ab3be?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 </div>
 <div class="title1">
 		<b>Расписание на 20.04.2024</b>
