--- a/livetv.html
+++ b/livetv.html
@@ -190,10 +190,8 @@ window.onclick = function(event) {
           <iframe width="720" height="405" src="https://rutube.ru/play/embed/5d1e91c8cb9789aabc38df5df6b27d3d/?skinColor=e53935" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
      </div>
      <div class="title1">
-        <b>Расписание на 18.09.2024</b>
-        <p>7:30 МСК:</p>
-        <p>- Неудачные дубли телепередачи "ВЕЛОМАРШРУТ"</p>
-        <p>С 7:32 МСК:</p>
+        <b>Расписание на 20.09.2024</b>
+        <p>С 9:00 МСК:</p>
         <p>- Фильм "Чудеса случаются"</p>
         <p>- Короткометражный фильм "Страйдер"</p>
         <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
@@ -202,54 +200,18 @@ window.onclick = function(event) {
         <p>- "Импульс - шаг в будущее"</p>
         <p>- Короткометражный фильм "Беседа"</p>
         <p>- Короткометражный фильм "Скейт"</p>
-        <p>9:37 МСК:</p>
+        <p>11:07 МСК:</p>
         <p>- К/Ф "ЭГО"</p>
-        <p>10:00 МСК:</p>
+        <p>11:30 МСК:</p>
         <p>- К/Ф "Карачун"</p>
-        <p>10:25 МСК:</p>
+        <p>11:55 МСК:</p>
         <p>Продолжение вещания</p>
-        <p>15:35 МСК:</p>
+        <p>14:45 МСК:</p>
         <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>15:55 МСК:</p>
-        <p>Продолжение вещания</p>
-        <!-- <p>С 11:00 МСК:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
-        <p>- Короткометражный фильм "СДЕЛКА".</p>
-        <p>- Велопрогулка по Подмосковью - Люберцы</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>13:07 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>13:30 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>13:55 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>16:45 МСК:</p>
-        <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p>
-        <p>18:00 МСК:</p>
-        <p>Реальность полёта <mark>НОВОЕ!</mark></p>
-        <p>18:40 МСК:</p>
-        <p>Продолжение вещания</p></div> -->
-        <!-- <p>С 8:00 МСК:</p>
-        <p>- Фильм "Чудеса случаются"</p>
-        <p>- Короткометражный фильм "Страйдер"</p>
-        <p>- Обзорная передача про игру в Roblox "Метро Москвы Некрасовка" - 2 серия.</p>
-        <p>- Короткометражный фильм "СДЕЛКА".</p>
-        <p>- Велопрогулка по Подмосковью - Люберцы</p>
-        <p>- "Импульс - шаг в будущее"</p>
-        <p>- Короткометражный фильм "Беседа"</p>
-        <p>- Короткометражный фильм "Скейт"</p>
-        <p>10:07 МСК:</p>
-        <p>- К/Ф "ЭГО"</p>
-        <p>10:30 МСК:</p>
-        <p>- К/Ф "Карачун"</p>
-        <p>10:55 МСК:</p>
-        <p>Продолжение вещания</p>
-        <p>16:00 МСК:</p>
-        <p>"ВЕЛОМАРШРУТ" - Некрасовка, Косино-Ухтомский, Новокосино</p> -->
+        <p>17:00 МСК:</p>
+        <p>Там, где горы встречаются с морем <mark>По пятницам</mark></p>
+        <p>17:40 МСК:</p>
+        <p>Продолжение вещания</p></div>
      </div>
 </div>
   </div><!-- /.entry-content -->
