--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ window.onclick = function(event) {
 		<!-- <mark>Запись вещания:</mark> -->
 </div>
 <div class="video">
-	<iframe src="https://vk.ru/video_ext.php?oid=-214689242&id=456239083&autoplay=1" width="426" height="240" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
+	<iframe src="https://vk.ru/video_ext.php?oid=-214689242&id=456239083&autoplay=1" width="426" height="240" allow=" encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
 
 </div>
 <div class="title1">
